[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
divan = "0.1.7"
glam = "0.24.2"
indicatif = "0.17.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
pathfinding = "4.6.0"
rayon = "1.8.0"
regex = "1.10.2"
reikna = "0.12.3"

[[bench]]
name = "aoc_all"
harness = false
